# CMakeDemo

./: CMakeLists.txt  Readme.md
cmake/: powershell.cmake  python.cmake
res/: struct.drawio
src/ext/: CMakeLists.txt
src/ext/add/: CMakeLists.txt  myadd.cpp  myadd2.cpp
src/ext/add/include/: myadd.h
src/ext/add/res/: 1.mat  2.mat
src/ext/div/: CMakeLists.txt  mydiv.cpp
src/ext/div/include/: mydiv.h
src/ext/mul/: CMakeLists.txt  mymul.cpp
src/ext/mul/include/: mymul.h
src/ext/sub/: CMakeLists.txt  mysub.cpp
src/ext/sub/include/: mysub.h
src/test/: CMakeLists.txt  main.cpp
src/test/include/: myPrint.h
src/test/print/: myPrint.cpp  myPrint2.cpp
src/test/res/: a.mat  b.mat
